--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="D:/INHolland - YEAR 4/Git Repo/1/Assignment1/mongo-java-driver-2.13.1.jar"/>
+	<classpathentry kind="lib" path="/home/don/Documents/Git/mongo-java-driver-2.13.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
